feat: 重构meter结构与算法，修正部分接口名称，修复结构与导入不一致的问题
